--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 /* Tag selector to select the 'body' element */
 body {
-  /* Your code here! */
+  /* Your code here! */\
+  
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
   /* Your code here! */
+  width: 700px
+  margin:auto;
+  font-family: "Helvetica Neue"
 }
 
 /* ID selector to select the element with id 'main-header' */
